[FIX] web_editor: allow aligning pictograms to the right in cards
When replacing an image by a pictogram inside columns, the pictogram
right-alignment is neutralised by the fact that the section of the card
inside the column spans over 100% width.

This commit makes pictograms in those sections rely on their auto width
instead - thus letting the right-alignment happen as expected.

Steps to reproduce:
- Drop a "Columns" block.
- Replace an image by a pictogram.
- Select the pictogram.
- Click on the "Float Right" icon in the toolbar.
=> Pictogram remained aligned to the left.

task-2841127

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -199,6 +199,9 @@ img.ml-auto, img.mx-auto {
     display: block;
     text-align: center;
 }
+.fa.card-img, .fa.card-img-top, .fa.card-img-bottom {
+    width: auto;
+}
 
 div.media_iframe_video {
     margin: 0 auto;
